@@ -1,5 +1,6 @@
 Version 3.1.x:
 
+* Support joystick_port_[port]_[gamepadinput] input mapping.
 * Read [guid].fs-uae-controller controller configs.
 * Fixed uaenative_library option.
 * Added lots of game controller configs.
